[gd_scene load_steps=16 format=2]

[ext_resource path="res://Lib/Singleton/AudioCenter/AudioCenter.gd" type="Script" id=1]
[ext_resource path="res://Assets/Audio/Sfx/UI/GalaxHero_SFX_UI_Button1.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Audio/Sfx/Combat/beam_level.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Audio/Sfx/Combat/debris_star_kill.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Audio/Sfx/Combat/enemy_dead_small.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Audio/Sfx/Combat/player_hit.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Audio/Sfx/Combat/enemy_shoot_slow.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Audio/Sfx/Combat/level_up.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Audio/Sfx/Combat/pshot_normal.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/Audio/Sfx/Combat/shield_block.wav" type="AudioStream" id=10]

[sub_resource type="Animation" id=1]
resource_name = "Dim"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -6.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -60.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -60.0 ]
}

[sub_resource type="Animation" id=4]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -60.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -6.0, 0.0 ]
}

[node name="AudioManager" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="BGM" type="Node" parent="."]

[node name="BgmCore_DONT_TOUCH_THIS" type="AudioStreamPlayer" parent="BGM"]

[node name="PropertySetterPlayer" type="AnimationPlayer" parent="BGM/BgmCore_DONT_TOUCH_THIS"]
anims/Dim = SubResource( 1 )
anims/FadeIn = SubResource( 2 )
anims/FadeOutNoStop = SubResource( 3 )
anims/FadeOutStop = SubResource( 4 )
anims/Undim = SubResource( 5 )

[node name="SFX" type="Node" parent="."]

[node name="Character" type="Node" parent="SFX"]

[node name="Combat" type="Node" parent="SFX"]

[node name="BeamLevel" type="AudioStreamPlayer" parent="SFX/Combat"]
stream = ExtResource( 3 )

[node name="DebrisKill" type="AudioStreamPlayer" parent="SFX/Combat"]
stream = ExtResource( 4 )

[node name="EnemyDeadSmall" type="AudioStreamPlayer" parent="SFX/Combat"]
stream = ExtResource( 5 )

[node name="EnemyShootSlow" type="AudioStreamPlayer" parent="SFX/Combat"]
stream = ExtResource( 7 )

[node name="LevelUp" type="AudioStreamPlayer" parent="SFX/Combat"]
stream = ExtResource( 8 )

[node name="PlayerHit" type="AudioStreamPlayer" parent="SFX/Combat"]
stream = ExtResource( 6 )

[node name="PShotNormal" type="AudioStreamPlayer" parent="SFX/Combat"]
stream = ExtResource( 9 )

[node name="ShieldBlock" type="AudioStreamPlayer" parent="SFX/Combat"]
stream = ExtResource( 10 )

[node name="Environmental" type="Node" parent="SFX"]

[node name="UI" type="Node" parent="SFX"]

[node name="Button1" type="AudioStreamPlayer" parent="SFX/UI"]
stream = ExtResource( 2 )
